Fixed background color
Fixed the background color for the login and signup pages (before it either wouldn't cover the whole page, or it would cover too much, adding an unnecessary scroll)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -152,10 +152,5 @@ code {
 
 .light-bg {
   background-color: #D9D9D9;
-  height: 88.3vh;
-}
-
-.light-bg-signup {
-  background-color: #D9D9D9;
   height: 100vh;
 }
